test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_multiplicity/src/inline_attr.sw
library;

struct S { }

impl S {
    #[inline(always)]
    fn ok() { }

    #[inline(never)]
    #[inline(always)]
    #[inline(always), inline(never)]
    fn not_ok() { }
}